         originally requested as long as it gets a native endian 16 bit format
         (Fred).
20050113 ui/scaler/{scaler.[ch],scaler_internals.h,scalers.c},
         ui/sdl/sdldisplay.c: Undo accidental commit (Fred).
20050113 menu_data.c: add TS2068 to change ROMs menu.
20050114 ui/scaler/scalers.c: Undo accidental commit again (Fred).
20050115 settings.pl: Add short option for sound frequency (Fred).
20050115 hacking/implementation_notes.txt: update with new display algorithm.
20050115 sound/aosound.c: small fixes (Gergely).
20050115 man/fuse.1: add documentation for libao sound driver (Gergely).
20050205 Makefile.am: Add kempmouse.h to headers list (Fred).
20050205 sound/sdlsound.c: Remove unused socket header and replace setenv with
         putenv for Windows compatibility (Fred).
20050212 ui/gtk/{gtkinternals.h,pixmaps.c,statusbar.c}: add mouse icon
	 (Darren).
20050216 Makefile.am,menu.[ch],menu_data.c,profile.[ch],z80/{coretest.c,
	 z80_ops.c}: add very simple profiler; just records which
	 locations where executed at the moment.
20050217 profile.[ch],spectrum.c: make the profiler actually profile.
20050218 Makefile.am,ide.[ch],simpleide.c,zxatasp.c,zxcf.c: add "Save,
	 Don't Save, Cancel" functionality on IDE disk eject.
20050218 ide.[ch],simpleide.c,zxatasp.c,zxcf.c: add ide_insert function.
20050219 machines/specplus3.c: add "Save, Don't Save, Cancel" functionality on
	 +3 disk eject.
20050219 machines/specplus3.c: the +3 disk autoload snap is now an SZX file.
20050219 ide.[ch],simpleide.c,zxatasp.c,zxcf.c: make ide_insert check whether
	 the currently inserted disk is dirty before doing the insert.
20050219 ui/gtk/gtkui.c: check for modified IDE disks before exit.
20050219 machines/specplus3.c,ui/gtk/gtkui.c: check for modified +3 disks
	 before exit.
20050219 snapshot.c: ensure all menus etc are updated after snapshot load.
20050219 trdos.c,ui/gtk/gtkui.c: add "Save, Don't Save, Cancel"
	 functionality for TR-DOS disks.

	