@@ -27,7 +27,105 @@
 # keysyms.pl must do the appropriate work to convert things for other
 # user interfaces.
 
+Tab
+
+Return
+
 Escape
+
+space
+
+numbersign
+apostrophe
+comma
+minus
+period
+slash
+
+0
+1
+2
+3
+4
+5
+6
+7
+8
+9
+
+semicolon
+equal
+
+A
+B
+C
+D
+E
+F
+G
+H
+I
+J
+K
+L
+M
+N
+O
+P
+Q
+R
+S
+T
+U
+V
+W
+X
+Y
+Z
+
+a
+b
+c
+d
+e
+f
+g
+h
+i
+j
+k
+l
+m
+n
+o
+p
+q
+r
+s
+t
+u
+v
+w
+x
+y
+z
+
+BackSpace
+
+Up
+Down
+Left
+Right
+
+Insert
+Delete
+Home
+End
+Page_Up
+Page_Down
+
+Caps_Lock
+
 F1
 F2
 F3
@@ -41,81 +139,16 @@ F10
 F11
 F12
 
-1
-2
-3
-4
-5
-6
-7
-8
-9
-0
-minus
-equal
-BackSpace
-
-Tab
-q
-w
-e
-r
-t
-y
-u
-i
-o
-p
-
-Caps_Lock
-a
-s
-d
-f
-g
-h
-j
-k
-l
-semicolon
-apostrophe
-numbersign
-Return
-
 Shift_L
-z
-x
-c
-v
-b
-n
-m
-comma
-period
-slash
 Shift_R
-
 Control_L
-Alt_L
-Meta_L
-Super_L
-Hyper_L
-space
-Hyper_R
-Super_R
-Meta_R
-Alt_R
 Control_R
+Alt_L
+Alt_R
+Meta_L
+Meta_R
+Super_L
+Super_R
+Hyper_L
+Hyper_R
 Mode_switch
-
-Left
-Down
-Up
-Right
-
-Insert
-Delete
-Page_Up
-Page_Down
-Home
-End
